--- a/Assignment.html
+++ b/Assignment.html
@@ -7,10 +7,10 @@
 <body>
 	<header>
 		<main>
-			<nav>
-				<a 	href="file:///Users/slims/Documents/HTML%20Documents/Assi	gnment.html">HOME</a>
-				<a 	href="file:///Users/slims/Documents/HTML%20Documents/Dog.	html">Dog Picture</a>
-				<a  href="file:///Users/slims/Documents/HTML%20Documents/Dog_V	ideo.html.html">Dog Video</a>
+<nav>
+				<a 	href="Assignment.html">HOME</a>
+				<a 	href="Dog.html">Dog Picture</a>
+				<a  href="Dog_Video.html.html">Dog Video</a>
 			</nav>
 		<h1>Arnold</h1>
 		<p> Here is a picture of Arnold</p>
