--- a/Dog.html
+++ b/Dog.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 		<main>
-			<nav>
-				<a 	href="file:///Users/slims/Documents/HTML%20Documents/Assi	gnment.html">HOME</a>
-				<a 	href="file:///Users/slims/Documents/HTML%20Documents/Dog.	html">Dog Picture</a>
-				<a  href="file:///Users/slims/Documents/HTML%20Documents/Dog_V	ideo.html.html">Dog Video</a>
+<nav>
+				<a 	href="Assignment.html">HOME</a>
+				<a 	href="Dog.html">Dog Picture</a>
+				<a  href="Dog_Video.html.html">Dog Video</a>
 			</nav>
 			<h1>One Good Doggo</h1>
 			<img src= "lab_puppy_dog_pictures.jpg">
