--- a/Dog_Video.html.html
+++ b/Dog_Video.html.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <nav>
-	<a 	href="file:///Users/slims/Documents/HTML%20Documents/Assi	gnment.html">HOME</a>
-	<a 	href="file:///Users/slims/Documents/HTML%20Documents/Dog.	html">Dog Picture</a>
-	<a  href="file:///Users/slims/Documents/HTML%20Documents/Dog_V	ideo.html.html">Dog Video</a>
-</nav>	
+				<a 	href="Assignment.html">HOME</a>
+				<a 	href="Dog.html">Dog Picture</a>
+				<a  href="Dog_Video.html.html">Dog Video</a>
+			</nav>	
 
 <main>
 	<h1>Doggo Video</h1>
