--- a/bootstrap4_project.html/academy_cinemas.html
+++ b/bootstrap4_project.html/academy_cinemas.html
@@ -95,54 +95,55 @@
       <!--END-COLUMNS-->
 
       <!--SHOWTIMES-->
-      <div id="showtimes" class="mx-5 row">
-        <div class="card">
-          <div class="card-group" style="width: 18rem;">
-            <img class= "card-img-top" src="./images/img_1.jpg" alt="Card image cap">
-            <div class="card-block">
-              <h5 class="card-title">Kong: Skull Island</h5>
-              <p class="card-text">A team of scientists explore an uncharted island in the Pcific, venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p><br>
-              <span class="badge badge-pill badge-info"> 12:00pm</span>
-              <span class="badge badge-pill badge-info"> 1:30pm</span>
-              <span class="badge badge-pill badge-info"> 3:00pm</span>
-              <span class="badge badge-pill badge-info"> 5:30pm</span>
-              <span class="badge badge-pill badge-info"> 7:00pm</span>
-              <span class="badge badge-pill badge-info"> 9:30pm</span>
+      <div id="showtimes" class="row">
+            <div class="card px-4">
+              <div class="card-group" style="width: 18rem;">
+                <img class= "card-img-top" src="./images/img_1.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h5 class="card-title">Kong: Skull Island</h5>
+                  <p class="card-text">A team of scientists explore an uncharted island in the Pcific, venturing into the domain of the mighty Kong, and must fight to escape a primal Eden.</p><br>
+                  <span class="badge badge-pill badge-info"> 12:00pm</span>
+                  <span class="badge badge-pill badge-info"> 1:30pm</span>
+                  <span class="badge badge-pill badge-info"> 3:00pm</span>
+                  <span class="badge badge-pill badge-info"> 5:30pm</span>
+                  <span class="badge badge-pill badge-info"> 7:00pm</span>
+                  <span class="badge badge-pill badge-info"> 9:30pm</span>
+                </div>
+              </div>
+            </div> 
+    
+            <div class="card px-4">
+              <div class="card-group" style="width: 18rem;">
+                <img class= "card-img-top" src="./images/img_2.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h5 class="card-title">Beauty and the Beast</h5>
+                  <p class="card-text">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a woman he keeps as prisoner.</p><br><br>
+                  <span class="badge badge-pill badge-info"> 12:00pm</span>
+                  <span class="badge badge-pill badge-info"> 1:30pm</span>
+                  <span class="badge badge-pill badge-info"> 3:00pm</span>
+                  <span class="badge badge-pill badge-info"> 5:30pm</span>
+                  <span class="badge badge-pill badge-info"> 7:00pm</span>
+                  <span class="badge badge-pill badge-info"> 9:30pm</span>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-  
-        <div class="card">
-          <div class="card-group" style="width: 18rem;">
-            <img class= "card-img-top" src="./images/img_2.jpg" alt="Card image cap">
-            <div class="card-block">
-              <h5 class="card-title">Beauty and the Beast</h5>
-              <p class="card-text">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a woman he keeps as prisoner.</p><br><br>
-              <span class="badge badge-pill badge-info"> 12:00pm</span>
-              <span class="badge badge-pill badge-info"> 1:30pm</span>
-              <span class="badge badge-pill badge-info"> 3:00pm</span>
-              <span class="badge badge-pill badge-info"> 5:30pm</span>
-              <span class="badge badge-pill badge-info"> 7:00pm</span>
-              <span class="badge badge-pill badge-info"> 9:30pm</span>
+    
+            <div class="card px-4">
+              <div class="card-group" style="width: 18rem;">
+                <img class= "card-img-top" src="./images/img_3.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h5 class="card-title">Ghost in the Shell</h5>
+                  <p class="card-text">In the near future, Major Mila Killian is the first of her kind: a human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p>
+                  <span class="badge badge-pill badge-info"> 12:00pm</span>
+                  <span class="badge badge-pill badge-info"> 1:30pm</span>
+                  <span class="badge badge-pill badge-info"> 3:00pm</span>
+                  <span class="badge badge-pill badge-info"> 5:30pm</span>
+                  <span class="badge badge-pill badge-info"> 7:00pm</span>
+                  <span class="badge badge-pill badge-info"> 9:30pm</span>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-  
-        <div class="card">
-          <div class="card-group" style="width: 18rem;">
-            <img class= "card-img-top" src="./images/img_3.jpg" alt="Card image cap">
-            <div class="card-block">
-              <h5 class="card-title">Ghost in the Shell</h5>
-              <p class="card-text">In the near future, Major Mila Killian is the first of her kind: a human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p>
-              <span class="badge badge-pill badge-info"> 12:00pm</span>
-              <span class="badge badge-pill badge-info"> 1:30pm</span>
-              <span class="badge badge-pill badge-info"> 3:00pm</span>
-              <span class="badge badge-pill badge-info"> 5:30pm</span>
-              <span class="badge badge-pill badge-info"> 7:00pm</span>
-              <span class="badge badge-pill badge-info"> 9:30pm</span>
-            </div>
-          </div>
-        </div>
+          </div>      
       <!--END-SHOWTIMES-->
 
 
